[gd_scene load_steps=4 format=3 uid="uid://ddad6ik68m4wq"]

[ext_resource type="Script" path="res://name_generator/ui/ui.gd" id="1_bwv7h"]

[sub_resource type="LabelSettings" id="LabelSettings_7akct"]
font_size = 30
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qfkhv"]

[node name="NameGeneratorUI" type="Control" node_paths=PackedStringArray("help_window", "name_type_selection", "number_of_names", "first_characters", "leading_characters", "trailing_characters", "delimiter", "final_characters", "new_line_check_box", "first_name_check_box", "last_name_check_box", "preview", "output")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_bwv7h")
help_window = NodePath("HelpWindowExterior")
name_type_selection = NodePath("Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/NameTypeSelection")
number_of_names = NodePath("Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/NumberOfNames")
first_characters = NodePath("Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8/FirstCharacters")
leading_characters = NodePath("Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6/LeadingCharacters")
trailing_characters = NodePath("Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5/TrailingCharacters")
delimiter = NodePath("Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/Delimiter")
final_characters = NodePath("Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7/FinalCharacters")
new_line_check_box = NodePath("Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/NewLineCheckBox")
first_name_check_box = NodePath("Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4/FirstNameCheckBox")
last_name_check_box = NodePath("Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4/LastNameCheckBox")
preview = NodePath("Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Preview")
output = NodePath("Generator/VBoxContainer/HBoxContainer/VBoxContainer2/TextEdit")

[node name="Generator" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Generator"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Generator/VBoxContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="Generator/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Name Generator"
label_settings = SubResource("LabelSettings_7akct")

[node name="VBoxContainer" type="VBoxContainer" parent="Generator/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Credits" type="Label" parent="Generator/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "By Phil Newberry"

[node name="LinkButton" type="LinkButton" parent="Generator/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "https://philnewberryls.itch.io/"
uri = "https://philnewberryls.itch.io/"

[node name="Help" type="Button" parent="Generator/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Help"

[node name="Control" type="Control" parent="Generator/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="Exit" type="Button" parent="Generator/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Exit"

[node name="HBoxContainer" type="HBoxContainer" parent="Generator/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Generator/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="TypeOfNameHeader" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Name pool:"

[node name="NameTypeSelection" type="ItemList" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
auto_height = true

[node name="ConfigurationsHeader" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Configuration: "

[node name="Label" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Preview"
horizontal_alignment = 1

[node name="Preview" type="TextEdit" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "preview text goes
here"
editable = false
wrap_mode = 1
scroll_fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Number of names to generate: "

[node name="NumberOfNames" type="SpinBox" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 1000.0
value = 1.0

[node name="HBoxContainer8" type="HBoxContainer" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
text = "First characters: "

[node name="FirstCharacters" type="LineEdit" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8"]
layout_mode = 2
expand_to_text_length = true
clear_button_enabled = true

[node name="HBoxContainer6" type="HBoxContainer" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Leading characters: "

[node name="LeadingCharacters" type="LineEdit" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
expand_to_text_length = true
clear_button_enabled = true

[node name="HBoxContainer5" type="HBoxContainer" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Trailing characters: "

[node name="TrailingCharacters" type="LineEdit" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
expand_to_text_length = true
clear_button_enabled = true

[node name="HBoxContainer2" type="HBoxContainer" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Delimiter: "

[node name="Delimiter" type="LineEdit" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = ", "
expand_to_text_length = true
clear_button_enabled = true

[node name="HBoxContainer7" type="HBoxContainer" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
text = "Final characters: "

[node name="FinalCharacters" type="LineEdit" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
text = "."
expand_to_text_length = true
clear_button_enabled = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "New line after every entry:"

[node name="NewLineCheckBox" type="CheckBox" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="Label3" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Include: "

[node name="HBoxContainer4" type="HBoxContainer" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "First name: "

[node name="FirstNameCheckBox" type="CheckBox" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
button_pressed = true

[node name="Label2" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
text = "Last Name: "

[node name="LastNameCheckBox" type="CheckBox" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
button_pressed = true

[node name="Button" type="Button" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Generate!"

[node name="Label2" type="Label" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Preset Configs: "

[node name="StringPreset" type="Button" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "gdscript Array[String]"

[node name="JsonPreset" type="Button" parent="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Json Array"

[node name="VBoxContainer2" type="VBoxContainer" parent="Generator/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Generator/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Output: "

[node name="TextEdit" type="TextEdit" parent="Generator/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1

[node name="HelpWindowExterior" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_qfkhv")

[node name="HelpWindowInterior" type="CenterContainer" parent="HelpWindowExterior"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="HelpWindowExterior/HelpWindowInterior"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="HelpWindowExterior/HelpWindowInterior/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HelpWindowExterior/HelpWindowInterior/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="CloseHelp" type="Button" parent="HelpWindowExterior/HelpWindowInterior/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "X"

[node name="Header" type="Label" parent="HelpWindowExterior/HelpWindowInterior/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "How to use"

[node name="Instructions" type="Label" parent="HelpWindowExterior/HelpWindowInterior/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Instructions"

[connection signal="button_up" from="Generator/VBoxContainer/HBoxContainer2/Help" to="." method="_on_help_button_up"]
[connection signal="button_up" from="Generator/VBoxContainer/HBoxContainer2/Exit" to="." method="_on_exit_button_up"]
[connection signal="ready" from="Generator/VBoxContainer/HBoxContainer2/Exit" to="." method="_on_exit_ready"]
[connection signal="ready" from="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/NameTypeSelection" to="." method="_on_item_list_ready"]
[connection signal="ready" from="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Preview" to="." method="_on_preview_ready"]
[connection signal="text_changed" from="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer8/FirstCharacters" to="." method="_on_preview_updatable_text_changed"]
[connection signal="text_changed" from="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer6/LeadingCharacters" to="." method="_on_preview_updatable_text_changed"]
[connection signal="text_changed" from="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer5/TrailingCharacters" to="." method="_on_preview_updatable_text_changed"]
[connection signal="text_changed" from="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2/Delimiter" to="." method="_on_preview_updatable_text_changed"]
[connection signal="text_changed" from="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer7/FinalCharacters" to="." method="_on_preview_updatable_text_changed"]
[connection signal="toggled" from="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3/NewLineCheckBox" to="." method="_on_preview_updatable_text_changed"]
[connection signal="button_up" from="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/StringPreset" to="." method="_on_string_preset_button_up"]
[connection signal="button_up" from="Generator/VBoxContainer/HBoxContainer/ScrollContainer/VBoxContainer/JsonPreset" to="." method="_on_json_preset_button_up"]
[connection signal="gui_input" from="HelpWindowExterior" to="." method="_on_help_window_exterior_gui_input"]
[connection signal="ready" from="HelpWindowExterior" to="." method="_on_help_window_exterior_ready"]
[connection signal="button_up" from="HelpWindowExterior/HelpWindowInterior/PanelContainer/MarginContainer/VBoxContainer/CloseHelp" to="." method="_on_close_help_button_up"]
